--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "basic-auth": "^2.0.1",
+    "bcrypt-nodejs": "0.0.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
@@ -17,6 +18,8 @@
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
     "sequelize": "^4.42.0"
   }
 }
