--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 node_modules
 
 # Express directory for storing Upload files
-public/uploads
+public/uploads/
 
 # Environment variables, never commit this file
 .env
