--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "sequelize": "^4.42.0",
+    "slugify": "^1.3.4",
     "uniqid": "^5.0.3"
   }
 }
